--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,13 @@ img {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   
+#ScoreTableDiv {
+    margin-left: 25%;
+}
 
+#message {
+    padding-left: 15%;
+}
 table {
     width: 200px;
     border-collapse: collapse;
@@ -68,4 +74,8 @@ th {
     text-align: left;
     color: white;
     background-color: darkblue;
+}
+
+caption {
+    font-size: large;
 }
