--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,9 @@ img {
 .FormButtons .button:hover:enabled {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
-
-
   
 #ScoreTableDiv {
-    margin-left: 20%;
+    margin-left: 15.5%;
     padding-left: 20%;
 }
 
@@ -91,7 +89,8 @@ th {
     padding: 4px;
     margin-top: 20px;
     white-space: nowrap;
-    text-align: center;
+	text-align: center;
+	font-size: larger;
 }
 
 th {
